--- a/.github/workflows/seqmap.yml
+++ b/.github/workflows/seqmap.yml
@@ -16,5 +16,5 @@ jobs:
       run: unzip seqmap-1.0.13-src.zip && cd seqmap-1.0.13-src
     - name: make
       run: g++ -O3 -m64 -o seqmap match.cpp
-#    - name: make check
-#      run: make check
+    - name: check binary
+      run: ./seqmap --version
