--- a/.github/workflows/seqmap.yml
+++ b/.github/workflows/seqmap.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: unzip
-      run: unzip seqmap-1.0.13-src.zip && cd seqmap-1.0.13-src
+      run: unzip seqmap-1.0.13-src.zip
     - name: make
-      run: g++ -O3 -m64 -o seqmap match.cpp
+      run: cd /home/runner/work/SeqMap/seqmap-1.0.13-src && g++ -O3 -m64 -o seqmap match.cpp
     - name: check binary
-      run: ./seqmap --version
+      run: /home/runner/work/SeqMap/seqmap-1.0.13-src/seqmap --version
