--- a/.github/workflows/seqmap.yml
+++ b/.github/workflows/seqmap.yml
@@ -16,5 +16,7 @@ jobs:
       run: unzip seqmap-1.0.13-src.zip
     - name: make
       run: cd /home/runner/work/SeqMap/SeqMap/seqmap-1.0.13-src && g++ -O3 -m64 -o seqmap match.cpp
+    - name: where am I
+      run: pwd
     - name: check binary
-      run: /home/runner/work/SeqMap/SeqMap/seqmap-1.0.13-src/seqmap --version
+      run: /home/runner/work/SeqMap/SeqMap/seqmap-1.0.13-src/seqmap
