--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
 - script: |
     unzip seqmap-1.0.13-src.zip
     pwd
-    cd seqmap-1.0.13-src && g++ -O3 -m64 -o seqmap match.cpp
+    cd seqmap-1.0.13-src && g++ -O3 -m64 -o seqmap match.cpp && cd ..
     unzip HG-U133_Plus_2.probe_fasta.zip
     wget "ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_35/gencode.v35.transcripts.fa.gz"
     gzip -d gencode.v35.transcripts.fa.gz
