--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,8 +8,8 @@ image:
   #- Visual Studio 2017
   - Visual Studio 2019
 environment:
-    #VCVAR2017: 'C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat'
-    VCVAR2019: 'C:\"Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat'
+    VCVAR2017: 'C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat'
+    #VCVAR2019: 'C:\"Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat'
 before_build:
     #- ps: |
     # ...example script to set the proper flags for vcvarsall ...
@@ -20,7 +20,7 @@ before_build:
     #} else {
     #  $env:VCVARSALL = "`"$env:VCVAR2019`" $Architecture"
     #}
-    - call 'C:\"Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat'
+    - call 'C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat'
 
 build_script:
   - cl /EHsc match.cpp /link /out:seqmap.exe
