--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,12 +35,12 @@ build_script:
 artifacts:
   - path: $(BUILD_NAME).zip
 deploy:
-  - provider: GitHub
-  - auth_token:
+   provider: GitHub
+   auth_token:
       secure: u5MrI/3BCylTlSEF21VCYOZ6JMkPpnVhWqFmpqZXXAcczVozk+CNheTOOjL7juo+
-  - artifact: $(BUILD_NAME).zip
-  - prerelease: true
-  - force_update: true
-  - on:
+   artifact: $(BUILD_NAME).zip
+   prerelease: true
+   force_update: true
+   on:
       branch: master
       APPVEYOR_REPO_TAG: true
