--- a/azure-pipelines-windows.yml
+++ b/azure-pipelines-windows.yml
@@ -19,12 +19,12 @@ steps:
     call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
     cl /EHsc match.cpp /link /out:seqmap.exe
     dir
-    C:\Program Files\\Git\bin\bash.exe /c 'unzip HG-U133_Plus_2.probe_fasta.zip'
+    bash.exe /c 'unzip HG-U133_Plus_2.probe_fasta.zip'
     ps: Invoke-WebRequest ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_35/gencode.v35.transcripts.fa.gz -OutFile "gencode.v35.transcripts.fa.gz"
-    C:\Program Files\\Git\bin\bash.exe /c 'gzip -d gencode.v35.transcripts.fa.gz'
+    bash.exe /c 'gzip -d gencode.v35.transcripts.fa.gz'
     .\seqmap.exe 0 HG-U133_Plus_2.probe_fasta gencode.v35.transcripts.fa results.txt /eland:3 /available_memory:300000 /output_all_matches
-    C:\Program Files\\Git\bin\bash.exe -c 'mkdir seqmap'
-    C:\Program Files\\Git\bin\bash.exe -c 'cp seqmap.exe results.txt seqmap'
-    C:\Program Files\\Git\bin\bash.exe -c '7z a seqmap.zip seqmap'
+    bash.exe -c 'mkdir seqmap'
+    bash.exe -c 'cp seqmap.exe results.txt seqmap'
+    bash.exe -c '7z a seqmap.zip seqmap'
 
   displayName: 'Run a multi-line script'
