--- a/azure-pipelines-windows.yml
+++ b/azure-pipelines-windows.yml
@@ -12,19 +12,18 @@ pool:
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
-
+- powershell: Invoke-WebRequest ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_35/gencode.v35.transcripts.fa.gz -OutFile "gencode.v35.transcripts.fa.gz"
 - script: |
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
-    call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+    call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
     cl /EHsc match.cpp /link /out:seqmap.exe
     dir
-    bash.exe /c 'unzip HG-U133_Plus_2.probe_fasta.zip'
-    ps: Invoke-WebRequest ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_35/gencode.v35.transcripts.fa.gz -OutFile "gencode.v35.transcripts.fa.gz"
-    bash.exe /c 'gzip -d gencode.v35.transcripts.fa.gz'
+    bash -c 'unzip HG-U133_Plus_2.probe_fasta.zip'
+    bash -c 'gzip -d gencode.v35.transcripts.fa.gz'
     .\seqmap.exe 0 HG-U133_Plus_2.probe_fasta gencode.v35.transcripts.fa results.txt /eland:3 /available_memory:300000 /output_all_matches
-    bash.exe -c 'mkdir seqmap'
-    bash.exe -c 'cp seqmap.exe results.txt seqmap'
-    bash.exe -c '7z a seqmap.zip seqmap'
+    bash -c 'mkdir seqmap'
+    bash -c 'cp seqmap.exe results.txt seqmap'
+    bash -c '7z a seqmap.zip seqmap'
 
   displayName: 'Run a multi-line script'
