--- a/azure-pipelines-windows.yml
+++ b/azure-pipelines-windows.yml
@@ -17,8 +17,8 @@ steps:
 - script: |
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
-    dir 'C:\Program Files (x86)\'
-    dir 'C:\Program Files (x86)\Microsoft Visual Studio\2019'
+    dir 'C:\Program Files\'
+    dir 'C:\Program Files\Microsoft Visual Studio\2019'
 #    call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
 #    cl /EHsc match.cpp /link /out:seqmap.exe
 #    dir
