Update azure-pipelines-windows.yml for Azure Pipelines

--- a/azure-pipelines-windows.yml
+++ b/azure-pipelines-windows.yml
@@ -17,11 +17,9 @@ steps:
 - script: |
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
-    dir 'C:\Program Files\'
-    dir 'C:\Program Files\Microsoft Visual Studio\2017'
-#    call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-#    cl /EHsc match.cpp /link /out:seqmap.exe
-#    dir
+    call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+    cl /EHsc match.cpp /link /out:seqmap.exe
+    dir
 - task: ExtractFiles@1
   inputs:
     archiveFilePatterns: 'HG-U133_Plus_2.probe_fasta.zip'
