--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,6 +24,7 @@ before_build:
 
 build_script:
   - cl /EHsc match.cpp /link /out:seqmap.exe
+  - cl /EHsc collect_output.cpp /link /out:collect_output.exe
   - dir
   - bash -c 'unzip HG-U133_Plus_2.probe_fasta.zip'
   - ps: Invoke-WebRequest ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_35/gencode.v35.transcripts.fa.gz -OutFile "gencode.v35.transcripts.fa.gz"
