Try to release the binary compiled with macOS Catalina.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,3 +21,13 @@ steps:
     ls -al
     ./seqmap 0 HG-U133_Plus_2.probe_fasta gencode.v35.transcripts.fa results.txt /eland:3 /available_memory:300000 /output_all_matches
   displayName: 'Run a multi-line script'
+
+- task: GithubRelease@0
+  displayName: 'Create GitHub Release'
+  inputs:
+    gitHubConnection: seqmap
+    repositoryName: MitsuhaMiyamizu/SeqMap
+    tagSource: manual
+    tag: $(Build.BuildNumber)
+    assets: |
+      $(Build.ArtifactStagingDirectory)/*
