--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
 - task: GithubRelease@0
   displayName: 'Create GitHub Release'
   inputs:
-    gitHubConnection: seqmap
+    gitHubConnection: pushbinary
     repositoryName: MitsuhaMiyamizu/SeqMap
     tagSource: manual
     tag: $(Build.BuildNumber)
