Archive the binary folder.

--- a/azure-pipelines-msvc17.yml
+++ b/azure-pipelines-msvc17.yml
@@ -34,12 +34,20 @@ steps:
     .\seqmap.exe 0 HG-U133_Plus_2.probe_fasta gencode.v35.transcripts.fa results.txt /eland:3 /available_memory:300000 /output_all_matches
 
   displayName: 'Run a multi-line script'
-#- task: GithubRelease@0
-#  displayName: 'Create GitHub Release'
-#  inputs:
-#    gitHubConnection: pushbinary
-#    repositoryName: MitsuhaMiyamizu/SeqMap
-#    tagSource: manual
-#    tag: $(Build.BuildNumber)_MSVC17
-#    assets: |
-#      ./*.zip
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: './'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: './$(Build.BuildId).zip'
+    replaceExistingArchive: true
+    verbose: true
+- task: GithubRelease@0
+  displayName: 'Create GitHub Release'
+  inputs:
+    gitHubConnection: pushbinary
+    repositoryName: MitsuhaMiyamizu/SeqMap
+    tagSource: manual
+    tag: $(Build.BuildNumber)_MSVC17
+    assets: |
+      ./$(Build.BuildId).zip
