Archive MSVC19 binary file as well.

--- a/azure-pipelines-windows.yml
+++ b/azure-pipelines-windows.yml
@@ -34,6 +34,14 @@ steps:
     .\seqmap.exe 0 HG-U133_Plus_2.probe_fasta gencode.v35.transcripts.fa results.txt /eland:3 /available_memory:300000 /output_all_matches
 
   displayName: 'Run a multi-line script'
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: './'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: './$(Build.BuildId).zip'
+    replaceExistingArchive: true
+    verbose: true
 - task: GithubRelease@0
   displayName: 'Create GitHub Release'
   inputs:
@@ -42,4 +50,4 @@ steps:
     tagSource: manual
     tag: $(Build.BuildNumber)_MSVC19
     assets: |
-      ./*
+      ./$(Build.BuildId).zip
