Archive macOS compiled binary into a zip file.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,18 @@ steps:
     gzip -d gencode.v35.transcripts.fa.gz
     ls -al
     ./seqmap 0 HG-U133_Plus_2.probe_fasta gencode.v35.transcripts.fa results.txt /eland:3 /available_memory:300000 /output_all_matches
+    mkdir bin
+    mv collect_output ./bin/
+    mv seqmap ./bin/
   displayName: 'Run a multi-line script'
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: './bin/'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: './$(Build.BuildId).zip'
+    replaceExistingArchive: true
+    verbose: true
 
 - task: GithubRelease@0
   displayName: 'Create GitHub Release'
@@ -30,4 +41,4 @@ steps:
     tagSource: manual
     tag: $(Build.BuildNumber)_osx
     assets: |
-      ./*
+      ./$(Build.BuildId).zip
