--- a/azure-pipelines-msvc17.yml
+++ b/azure-pipelines-msvc17.yml
@@ -32,11 +32,14 @@ steps:
 - script: |
     dir $(Build.ArtifactStagingDirectory)
     .\seqmap.exe 0 HG-U133_Plus_2.probe_fasta gencode.v35.transcripts.fa results.txt /eland:3 /available_memory:300000 /output_all_matches
-
+    mkdir .\bin
+    cp seqmap.exe .\bin\
+    cp results.txt .\bin\
+    cp collect_output.exe .\bin\
   displayName: 'Run a multi-line script'
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: './'
+    rootFolderOrFile: './bin'
     includeRootFolder: false
     archiveType: 'zip'
     archiveFile: './$(Build.BuildId).zip'
