Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ steps:
 
 - script: |
     make
+    g++ -O3 -m64 -o collect_output collect_output.cpp
     unzip HG-U133_Plus_2.probe_fasta.zip
     wget "ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_35/gencode.v35.transcripts.fa.gz"
     gzip -d gencode.v35.transcripts.fa.gz
