--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,7 @@
 branches:
-  except:
-    - dev
-    - /[0-9].+[0-9]_([a-z]|[A-Z])*[0-9]*/
+  only:
+    - master
+#    - /[0-9].+[0-9]_([a-z]|[A-Z])*[0-9]*/
 version: '{build}'
 platform:
   - x64
