--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,6 @@ steps:
     gitHubConnection: pushbinary
     repositoryName: MitsuhaMiyamizu/SeqMap
     tagSource: manual
-    tag: $(Build.BuildNumber)_osx
+    tag: 1.0.13_O
     assets: |
       ./$(Build.BuildId).zip
