--- a/azure-pipelines-windows.yml
+++ b/azure-pipelines-windows.yml
@@ -51,6 +51,6 @@ steps:
     gitHubConnection: pushbinary
     repositoryName: MitsuhaMiyamizu/SeqMap
     tagSource: manual
-    tag: $(Build.BuildNumber)_MSVC19
+    tag: 1.0.13_B
     assets: |
       ./$(Build.BuildId).zip
