--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,6 @@
 branches:
-    only:
-      - 1.0.13
-#    - /[0-9].+[0-9]_([a-z]|[A-Z])*[0-9]*/
+    except:
+      - /(1.0.13)+_+[A-Z]/
 version: '{build}'
 platform:
   - x64
