--- a/azure-pipelines-msvc17.yml
+++ b/azure-pipelines-msvc17.yml
@@ -51,6 +51,6 @@ steps:
     gitHubConnection: pushbinary
     repositoryName: MitsuhaMiyamizu/SeqMap
     tagSource: manual
-    tag: 1.0.13_A
+    tag: $(Build.BuildNumber)_MSVC17
     assets: |
       ./$(Build.BuildId).zip
