--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 branches:
   except:
   - dev
-  - /(1.0.13)+_+[A-Z]/
+  - /[0-9].+[0-9]_MSVC+[0-9]*/
+  - /[0-9].+[0-9]_OSX/
 arch: amd64
 os: linux
 dist: bionic
