--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,6 +3,7 @@ branches:
       - 1.0.13_OSX
       - /[0-9].+[0-9]_MSVC+[0-9]*/
       - /[0-9].+[0-9]_OSX/
+      - /^untagged/
 version: '{build}'
 platform:
   - x64
