--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,8 +26,8 @@ before_build:
     - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
 
 build_script:
-  - cl /EHsc match.cpp /link /out:seqmap.exe
-  - cl /EHsc collect_output.cpp /link /out:collect_output.exe
+  - cl /EHa /arch:AVX512 /Od match.cpp /link /out:seqmap.exe
+  - cl /EHa /arch:AVX512 /Od collect_output.cpp /link /out:collect_output.exe
   - dir
   - bash -c 'unzip HG-U133_Plus_2.probe_fasta.zip'
   - ps: Invoke-WebRequest ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_35/gencode.v35.transcripts.fa.gz -OutFile "gencode.v35.transcripts.fa.gz"
