Change GCC optimization setting to O2

--- a/azure-pipelines-msvc17.yml
+++ b/azure-pipelines-msvc17.yml
@@ -16,8 +16,8 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
     call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-    cl /EHa /arch:AVX512 /O2 match.cpp /link /out:seqmap.exe
-    cl /EHa /arch:AVX512 /O2 collect_output.cpp /link /out:collect_output.exe
+    cl /nologo /EHa /arch:AVX512 /O2 match.cpp /link /out:seqmap.exe
+    cl /nologo /EHa /arch:AVX512 /O2 collect_output.cpp /link /out:collect_output.exe
     dir
 - task: ExtractFiles@1
   inputs:
